# Devel

./: .gitignore  CLAUDE.md  LICENSE  README.md  configure.sh  pyproject.toml  settings.json
Pupa_muscle_imaging/: Load_traced_muscles.ipynb  Load_traced_pupa.ipynb  NMF_sections.ipynb  PCA_sections.ipynb  align_traced_pupa_to_video.ipynb  get_segment_muscles.py  interactive_alignment.py  load_tif_napari.py  manual_roi_selection.py  mkv2mp4_bulk.py  mkv2tif.py  preprocess_pupa_muscle.py  pupa_development_videos.ipynb  pupa_motioncorr.py  pupa_muscle_video_to_h5.py  select_manual_roi.py  test_interactive_alignment.py  utils.py
Pupa_muscle_imaging/FlyTrack/: flytrack_core.py  motion_correct_flytrack.py  preprocess_flytrack.py
Pupa_muscle_imaging/FlyTrack/old/: get_segment_muscles.py  mkv2tif.py  preprocess_pupa_muscle.py
Pupa_muscle_imaging/FlyTrack/tests/: make_synthetic_test_data.py  test_flytrack_workflow.py
Pupa_muscle_imaging/FlyTrack_long/: flytrack_long_batch_convert.py
Pupa_muscle_imaging/NMF/: utils.py
Pupa_muscle_imaging/no_longer_used/: select_frames_manual.py
Pupa_muscle_imaging/referenceMaps/: align_pupa_outlines.py  align_traced_pupa_to_video.ipynb
Pupa_muscle_imaging/scape/: average_act_scape.py  segmentation_corr.py
